<resources>
    <string name="app_name" >Currency Converter</string>
    <string name="nav_header_title" translatable="false">Currency Converter</string>
    <string name="nav_header_subtitle" translatable="false">currency.converter@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_settings">Settings</string>
    <string name="default_value">No value</string>
    <string name="menu_about_us">About</string>
    <string name="empty_fav_list">Empty favorite list</string>
    <string name="default_value_number" translatable="false">0</string>
    <string name="_all">Albanian Lek</string>
    <string name="_dzd">Algerian Dinar</string>
    <string name="_usd">US Dollar</string>
    <string name="_eur">Euro</string>
    <string name="_aoa">Angolan Kwanza</string>
    <string name="_xcd">East Caribbean Dollar</string>
    <string name="_ars">Argentine Peso</string>
    <string name="_amd">Armenian Dram</string>
    <string name="_awg">Aruban Florin</string>
    <string name="_aud">Australian Dollar</string>
    <string name="_azn">Azerbaijan Manat</string>
    <string name="_bsd">Bahamian Dollar</string>
    <string name="_bhd">Bahraini Dinar</string>
    <string name="_bdt">Bangladeshi Taka</string>
    <string name="_bbd">Barbados Dollar</string>
    <string name="_xof">West African CFA franc</string>
    <string name="_bzd">Belize Dollar</string>
    <string name="_bmd">Bermudian Dollar</string>
    <string name="_btn">Bhutanese Ngultrum</string>
    <string name="_inr">Indian Rupee</string>
    <string name="_bob">Bolivian Boliviano</string>
    <string name="_bam">Bosnia-Herzegovina convertible Mark</string>
    <string name="_bwp">Botswana Pula</string>
    <string name="_brl">Brazilian Real</string>
    <string name="_bnd">Brunei Dollar</string>
    <string name="_bgn">Bulgarian Lev</string>
    <string name="_bif">Burundi Franc</string>
    <string name="_khr">Cambodian Riel</string>
    <string name="_xaf">Central African CFA franc</string>
    <string name="_cad">Canadian Dollar</string>
    <string name="_cve">Cape Verde Escudo</string>
    <string name="_kyd">Cayman Islands Dollar</string>
    <string name="_clp">Chilean Peso</string>
    <string name="_cny">Renminbi</string>
    <string name="_cop">Colombian Peso</string>
    <string name="_kmf">Comoro Franc</string>
    <string name="_cdf">Congolese Franc</string>
    <string name="_nzd">New Zealand Dollar</string>
    <string name="_crc">Costa Rican Colón</string>
    <string name="_hrk">Croatian Kuna</string>
    <string name="_cup">Cuban Peso</string>
    <string name="_try">Turkish Lira</string>
    <string name="_czk">Czech Koruna</string>
    <string name="_dkk">Danish Kroner</string>
    <string name="_djf">Djiboutian Franc</string>
    <string name="_egp">Egyptian Pound</string>
    <string name="_dop">Dominican Peso</string>
    <string name="_svc">Salvadoran Colón</string>
    <string name="_ern">Eritrean Nakfa</string>
    <string name="_etb">Ethiopian Birr</string>
    <string name="_fkp">Falkland Islands Pound</string>
    <string name="_fok">Faroese Króna</string>
    <string name="_fjd">Fiji Dollar</string>
    <string name="_xpf">CFP Franc</string>
    <string name="_gmd">Gambian Dalasi</string>
    <string name="_gel">Georgian Lari</string>
    <string name="_ghc">Ghanaian Cedi 1967</string>
    <string name="_gip">Gibraltar Pound</string>
    <string name="_gtq">Guatemalan Quetzal</string>
    <string name="_gnf">Guinea Franc</string>
    <string name="_gyd">Guyana Dollar</string>
    <string name="_htg">Haitian Gourde</string>
    <string name="_hnl">Honduran Lempira</string>
    <string name="_hkd">Hong Kong Dollar</string>
    <string name="_huf">Hungarian Forint</string>
    <string name="_isk">Iceland Króna</string>
    <string name="_idr">Indonesian Rupiah</string>
    <string name="_irr">Iranian Rial</string>
    <string name="_iqd">Iraqi Dinar</string>
    <string name="_ils">New Israeli Sheqel</string>
    <string name="_jmd">Jamaican Dollar</string>
    <string name="_jpy">Japanese Yen</string>
    <string name="_jod">Jordanian Dinar</string>
    <string name="_kzt">Kazakhstani Tenge</string>
    <string name="_kes">Kenyan Shilling</string>
    <string name="_kpw">North Korean Won</string>
    <string name="_krw">South Korean Won</string>
    <string name="_kwd">Kuwaiti Dinar</string>
    <string name="_kgs">Kyrgyzstani Som</string>
    <string name="_lak">Lao Kip</string>
    <string name="_lbp">Lebanese Pound</string>
    <string name="_lsl">Lesotho Loti</string>
    <string name="_lrd">Liberian Dollar</string>
    <string name="_lyd">Lybian Dinar</string>
    <string name="_chf">Swiss Franc</string>
    <string name="_mop">Macanese Pataca</string>
    <string name="_mkd">Macedonian Denar</string>
    <string name="_mgf">Malagasy Franc</string>
    <string name="_mwk">Malawian Kwacha</string>
    <string name="_myr">Malaysian Ringgit</string>
    <string name="_mvr">Maldivian Rufiyaa</string>
    <string name="_mtl">Maltese Lira</string>
    <string name="_mro">Mauritanian Ouguiya 1973</string>
    <string name="_mur">Mauritius Rupee</string>
    <string name="_mxn">Mexican Peso</string>
    <string name="_mdl">Moldovan Leu</string>
    <string name="_mnt">Mongolia Tughrik</string>
    <string name="_mad">Moroccan Dirham</string>
    <string name="_mzm">Mozambican Metical 1980</string>
    <string name="_mmk">Burmese Kyat</string>
    <string name="_nad">Namibia Dollar</string>
    <string name="_zar">South African Rand</string>
    <string name="_npr">Nepalese Rupee</string>
    <string name="_ang">Netherlands Antillean Guilder</string>
    <string name="_nio">Nicaraguan Córdoba</string>
    <string name="_ngn">Nigerian Naira</string>
    <string name="_nok">Norwegian Krone</string>
    <string name="_omr">Omani Rial</string>
    <string name="_pkr">Pakistan Rupee</string>
    <string name="_pab">Panamanian Balboa</string>
    <string name="_pgk">Papua New Guinean Kina</string>
    <string name="_pyg">Paraguayan Guarani</string>
    <string name="_pen">Peruvian Sol</string>
    <string name="_php">Philippine Peso</string>
    <string name="_pln">Polish Zloty</string>
    <string name="_qar">Qatari Rial</string>
    <string name="_rol">Romanian Leu XVII</string>
    <string name="_rub">Russian Ruble</string>
    <string name="_rwf">Rwanda Franc</string>
    <string name="_shp">Saint Helena Pound</string>
    <string name="_wst">Samoan Tala</string>
    <string name="_std">São Tomé and Príncipe Dobra 1977</string>
    <string name="_sar">Saudi Riyal</string>
    <string name="_csd">Serbian Dinar 2003</string>
    <string name="_scr">Seychelles Rupee</string>
    <string name="_sll">Sierra Leonean Leone</string>
    <string name="_sgd">Singapore Dollar</string>
    <string name="_skk">Slovak Koruna</string>
    <string name="_sbd">Solomon Islands Dollar</string>
    <string name="_sos">Somali Shilling</string>
    <string name="_ssp">South Sudanese Pound</string>
    <string name="_lkr">Sri Lanka Rupee</string>
    <string name="_sdg">Sudanese Pound</string>
    <string name="_srg">Suriname Guilder</string>
    <string name="_szl">Swazi Lilangeni</string>
    <string name="_sek">Swedish Krona</string>
    <string name="_syp">Syrian Pound</string>
    <string name="_twd">New Taiwan Dollar</string>
    <string name="_tjs">Tajikistani Somoni</string>
    <string name="_tzs">Tanzanian Shilling</string>
    <string name="_thb">Thai Baht</string>
    <string name="_top">Tonga Paʻanga</string>
    <string name="_ttd">Trinidad and Tobago Dollar</string>
    <string name="_tnd">Tunisian Dinar</string>
    <string name="_tmm">Turkmenistani Manat</string>
    <string name="_ugx">Ugandan Shilling</string>
    <string name="_uah">Ukrainian Hryvnia</string>
    <string name="_aed">UAE Dirham</string>
    <string name="_gbp">Pound Sterling</string>
    <string name="_uyu">Uruguayan Peso</string>
    <string name="_uzs">Uzbekistan So\'m</string>
    <string name="_vef">Venezuelan Bolívar hard 2008</string>
    <string name="_vnd">Vietnamese Dong</string>
    <string name="_vuv">Vanuatu Vatu</string>
    <string name="_yer">Yemeni Rial</string>
    <string name="_zmw">Zambian Kwacha</string>
    <string name="_byn">Belarusian ruble</string>
    <string name="_ggp">Guernsey Pound</string>
    <string name="_imp">Manx Pound</string>
    <string name="_jep">Jersey Pound</string>
    <string name="_kid">Kiribati Dollar</string>
    <string name="_mru">Mauritanian Ouguiya</string>
    <string name="_stn">São Tomé and Príncipe Dobra</string>
    <string name="_tvd">Tuvaluan Dollar</string>
    <string name="_ves">Venezuelan Bolívar soberano</string>
    <string name="_ved">Venezuelan Bolívar digital</string>
    <string name="_xdr">Special drawing rights</string>
    <string name="_zwl">Zimbabwean Dollar 2009</string>
    <string name="_ron">Romanian Leu</string>
    <string name="_cuc">Cuban convertible Peso</string>
    <string name="_hrv">-Not found-</string>
    <string name="_tmt">Turkmenistan Manat</string>
    <string name="_rsd">Serbian Dinar</string>
    <string name="_ghs">Ghanaian Cedi</string>
    <string name="_bih">-Not found-</string>
    <string name="_mzn">Mozambican Metical</string>
    <string name="_mga">Malagasy Ariary</string>
    <string name="_srd">Surinamese Dollar</string>
    <string name="_xrp">Ripple (payment protocol)</string>
    <string name="_btc" translatable="false">Bitcoin</string>
    <string name="_eth" translatable="false">Ethereum</string>
    <string name="_ltc" translatable="false">Litecoin</string>
    <string name="u_afn" translatable="false">؋</string>
    <string name="u_all" translatable="false">L</string>
    <string name="txt_cancel">Cancel</string>
    <string name="one_btn" translatable="false">1</string>
    <string name="two_btn" translatable="false">2</string>
    <string name="three_btn" translatable="false">3</string>
    <string name="four_btn" translatable="false">4</string>
    <string name="five_btn" translatable="false">5</string>
    <string name="six_btn" translatable="false">6</string>
    <string name="seven_btn" translatable="false">7</string>
    <string name="eight_btn" translatable="false">8</string>
    <string name="nine_btn" translatable="false">9</string>
    <string name="dot_btn" translatable="false">.</string>
    <string name="zero_btn" translatable="false">0</string>
    <string name="clear_btn">Clear</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ok_btn" translatable="false">OK</string>
    <string name="delete_text" translatable="false">⌫</string>
    <string name="network_settings">Network</string>
    <string name="automatic_update_symbol" translatable="false">↻</string>
    <string name="automatic_update_enabled">Automatic update enabled</string>
    <string name="automatic_update">Automatic update</string>
    <string name="appearance_settings">Appearance</string>
    <string name="decimal_number_symbol" translatable="false">$</string>
    <string name="decimal_number">Decimal number</string>
    <string name="decimal_number_2">2 decimals</string>
    <string name="one_decimal">\t1 decimal</string>
    <string name="two_decimals">\t2 decimals</string>
    <string name="three_decimals">\t3 decimals</string>
    <string name="four_decimals">\t4 decimals</string>
    <string name="support">Support</string>
    <string name="installing_title" translatable="false">Currency Converter v1.0</string>
    <string name="welcome_to_this_app">Welcome to the app!</string>
    <string name="network_connecting_note">Note: Connect to the network to update data</string>
    <string name="after_installed_direction">Please go to the Home to use this app</string>
</resources>