<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home_ic"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/menu_favorite_ic"
            android:title="@string/menu_favorite" />
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/menu_settings_ic"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/menu_about_ic"
                android:title="@string/menu_about_us" />
        </menu>
    </item>

</menu>