<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/input_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:layout_toStartOf="@id/delete_button"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/default_value_number"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/delete_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_above="@id/keyboard"
        android:layout_alignParentEnd="true"
        android:text="@string/delete_text"
        android:textColor="#DD0000"
        android:textSize="20sp" />


    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_textview">

        <TableRow android:layout_height="1dp" android:background="#888F9295">
            <TextView android:layout_span="3" android:layout_height="1dp"
                android:layout_width="fill_parent" android:text="">
            </TextView>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/one_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/two_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/three_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/four_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/five_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/six_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/seven_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/eight_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/nine_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/dot_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/zero_btn"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_height="1dp" android:background="#888F9295">
            <TextView android:layout_span="3" android:layout_height="1dp"
                android:layout_width="fill_parent" android:text="">
            </TextView>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/clear_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyboard"
        android:layout_alignParentStart="true"
        android:paddingVertical="15dp"
        android:text="@string/clear_btn" />

    <Button
        android:id="@+id/cancel_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyboard"
        android:layout_toStartOf="@id/ok_button"
        android:paddingVertical="15dp"
        android:text="@string/cancel_btn" />

    <Button
        android:id="@+id/ok_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyboard"
        android:layout_alignParentEnd="true"
        android:paddingVertical="15dp"
        android:text="@string/ok_btn" />




</RelativeLayout>